
* The support for the embedded Elasticsearch will be dropped in the future. It is highly recommended to link:{{< relref 
"elasticsearch.asciidoc" >}}#_dedicated_elasticsearch[setup Elasticsearch as a dedicated service].

[[v0.30.3]]
== 0.30.3 (TBD)

icon:plus[] REST: The `/users` endpoint response will now contain all roles assigned to the loaded users.

icon:plus[] GraphQL: The `roles` field is now available for user fields.

icon:check[] Fixed a bug in the consistency checks which claimed missing user role shortcuts.

icon:check[] Schema: A bug was fixed which prevented the update of the schema field `elasticsearch` property to value null.

icon:plus[] Docker: Default memory settings for the server and demo docker images were added. Default for server is set to `-Xms512m -Xmx512m -XX:MaxDirectMemorySize=256m`. The setting can be changed using the `JAVA_TOOL_OPTIONS` environment variable. See link:https://getmesh.io/docs/administration-guide/#_memory_settings[Memory documentation] for more information.

[[v0.30.2]]
== 0.30.2 (28.02.2019)

icon:plus[] OrientDB: The included OrientDB version has been updated to version 3.0.16 - This update addresses various locking and synchronization issues when clustering was enabled.

icon:check[] Restore: The restore process has been reworked to avoid issues with graph database indices. Additional error handling has been added.

icon:check[] Backup: Backup support for clustered mode has been added. The backup endpoint previously did not work as expected in clustered mode.

[[v0.30.1]]
== 0.30.1 (15.02.2019)

icon:plus[] GraphQL: nodes can now be loaded via a list of UUIDs.

icon:check[] Java Rest Client: Fixed a bug that occurred when calling `getResponse()` with `getBody()` on a binary response.

icon:check[] Java Rest Client: Fixed a bug in the MeshRestClient#isOneOf helper function.

[[v0.30.0]]
== 0.30.0 (12.02.2019)
